--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -3,11 +3,9 @@ channels:
   - conda-forge
 dependencies:
   - numpy
-  - psutil
-  - toolz
+  - scipy
+  - statsmodels
   - matplotlib
-  - dill
   - pandas
-  - partd
-  - bokeh
-  - dask
+  - seaborn
+  - scikit-learn==0.21.3
